16-Sep-2015 Next target version set to 1.0.