@@ -1,1 +1,2 @@
+18-Sep-2015 Public patches on a module are now inherited by all modules that reside within it. For example, a C static library has a public patch to provide an include path; all source containers within that static library automatically use that patch.
 16-Sep-2015 Next target version set to 1.0.
